[tool.poetry]
name = "ccjob"
version = "0.1.0"
description = ""
authors = ["linooohon <linooohon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.26.0"
fake-useragent = "^0.1.11"
beautifulsoup4 = "^4.10.0"
boto3 = "^1.20.26"
python-dotenv = "^0.19.2"
tabulate = "^0.8.9"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
# This config will let poetry auto build virtualenv in project and create a .venv folder to install required package from proetry.toml.
in-project = true